# Rusted_Intal

./: .gitignore  Cargo.toml  README.md
src/: intal.rs  main.rs
