[package]
name = "Rusted_Intal"
version = "0.1.0"
authors = ["sriram <sriramsub7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "intal"
path = "src/intal.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
